# qdoas2harp

./: .buildinfo  MANIFEST.in  README  aux_imp.html  genindex.html  index.html  limit.html  main.html  main_aux.html  mapping.html  objects.inv  pyproject.toml  qd2hp.html  qd2hp_py.html  search.html  searchindex.js  setup.cfg  setup.py  tools.html  usage.html
.doctrees/: aux_imp.doctree  environment.pickle  index.doctree  limit.doctree  main.doctree  main_aux.doctree  mapping.doctree  qd2hp.doctree  qd2hp_py.doctree  tools.doctree  usage.doctree
.github/workflows/: documentation.yaml
_sources/: aux_imp.rst.txt  index.rst.txt  main.rst.txt  mapping.rst.txt  qd2hp.rst.txt  qd2hp_py.rst.txt
_static/: documentation_options.js
doc/: aux_imp.rst  conf.py  index.rst  limit.rst  main.rst  main_aux.rst  mapping.rst  qd2hp.rst  qd2hp_py.rst  tools.rst  usage.rst
doc/html/: .buildinfo  genindex.html  index.html  main.html  objects.inv  qd2hp.html  search.html  searchindex.js  tools.html  usage.html
doc/html/_sources/: index.rst.txt  tools.rst.txt
doc/html/_static/: documentation_options.js
qdoas2harp/: convert2harp.py  importer_aux.py  nctools.py  qd2hp_mapping.json  qd2hp_mapping.py  qdoas_mapping.json
