# pyproject.toml

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true #true is already the default actually

[project]
name = "qdoas2harp"
version = "1.2.2"
requires-python = ">=3.7"
dependencies = [
				 "numpy",
				  "netCDF4",
				  "attrs",
				 "cattrs"
				  ]


[project.scripts]
qd2hp = "qdoas2harp.convert2harp:cml"
aux_imp = "qdoas2harp.importer_aux:cml"

