# [metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
# license_files = LICENSE.txt

[metadata]     
name = qdoas2harp 

[bdist_wheel]
universal = 1
# [options]
# namespace_packages = cobra_so2


[options.entry_points]
console_scripts =
     qd2hp = qdoas2harp.convert2harp:cml


# [options]

# build_scripts =
#           executable = '/bin/custom_python'
      

# install_requires =
#     template_cobra 
# dependency_links = https://gitlab.aeronomie.be/ae/doas/s5ppal_cobra_template


